@@ -25,18 +25,27 @@ NET_USR_SBIN	=
 STD_BIN 	= 
 STD_LIB 	= 
 STD_SBIN	= 
-STD_USR_BIN	= ed tar
+STD_USR_BIN	= ed tar compress uncompress zcat
 STD_USR_LIB	= 
-STD_USR_MAN	= 
+STD_USR_MAN	= compress.1 uncompress.1 zcat.1
 STD_USR_SBIN	= 
 
 include $(BASEDIR)/Make.rules
 
 ###############################################################################
 
-PRGS=ed tar compress
+PRGS=ed tar compress uncompress zcat
 
 all: $(PRGS)
+
+compress:
+	$(CC) $(CFLAGS) -X-H0xe000 -s $@.c -o $@
+
+uncompress: compress
+	ln -sf compress uncompress
+
+zcat: compress
+	ln -sf compress zcat
 
 rfs: all
 	cp -p $(PRGS) $(TARGET_MNT)/bin
@@ -49,3 +58,4 @@ smin_rfs:
 
 clean:
 	rm -f core $(PRGS)
+
