@@ -14,6 +14,10 @@ Tommy McCabe			rocketjet314@yahoo.com
 
 -----------------------------------------------------------------
 
+Web Jun 02 21:01:34 CST 2004    Claudio Matsuoka <claudio@conectiva.com>
+
+	* fixed BSS problem
+
 Web Jun 02 14:16:57 CST 2004	Claudio Matsuoka <claudio@conectiva.com>
 	
 	* Added more minix utilities (cal diff file find head sort tail tee)
